<resources>
    <string name="app_name">Memogram</string>
    <string name="sign_up_label">Sign Up to: </string>
    <string name="firstName_label">First name</string>
    <string name="lastName_label">Last name</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="signUpButton">Sign Up</string>
    <string name="lblConnection">Connections</string>
    <string name="lblNumPost">Posts</string>

    <string name="lblEdit">Edit Profile</string>
    <string name="btnSave">Save Changes</string>

    <string name="buttonTakePhoto">Take Photo</string>
    <string name="btnClickPicture">Click</string>
    <string name="alert_dialog_two_buttons_title">Confirmation Dialog Example</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_hide">Hide</string>
    <string name="alert_dialog_something">Something</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_progress_text2">145/305 KB</string>
    <string name="select_dialog">Header title</string>
    <string name="select_dialog_show">List dialog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choiceMessage">The choice I will take</string>
    <string name="btn_createAlbum">Create Album</string>
    <string name="btn_takePhoto">Take Photo</string>
    <string name="btn_upload">Upload From Gallery</string>
    <string name="title">Title</string>
    <string name="caption">Caption</string>

    <string name="connection_lbl"> List of Connections </string>
    <string name="textViewSelectPlatform">Select Platform</string>
    <string name="btnSharePhoto">Share</string>
    <string-array name="contacts">
        <item>Hugo Bigatto</item>
        <item>Hussein Arafat</item>
        <item>Kimberely Akit</item>
    </string-array>
</resources>